# AiZO_Projekt_2

./: CMakeLists.txt  Edge.cpp  Edge.h  List.h  ListElement.h  Makefile  Result.cpp  Result.h  aizo_skrypt.py  algorithms.h  fileHandler.cpp  fileHandler.h  in.txt  inSP.txt  main.cpp  out.txt  outSP.txt
results/: dijkstra_array_100.csv  dijkstra_array_1000.csv  dijkstra_array_200.csv  dijkstra_array_400.csv  dijkstra_array_600_25.csv  dijkstra_array_600_50.csv  dijkstra_array_600_75.csv  dijkstra_array_600_99.csv  dijkstra_array_800.csv  dijkstra_list_100.csv  dijkstra_list_1000.csv  dijkstra_list_200.csv  dijkstra_list_400.csv  dijkstra_list_600_25.csv  dijkstra_list_600_50.csv  dijkstra_list_600_75.csv  dijkstra_list_600_99.csv  dijkstra_list_800.csv  prim_array_100.csv  prim_array_1000.csv  prim_array_200.csv  prim_array_400.csv  prim_array_600_25.csv  prim_array_600_50.csv  prim_array_600_75.csv  prim_array_600_99.csv  prim_array_800.csv  prim_list_100.csv  prim_list_1000.csv  prim_list_200.csv  prim_list_400.csv  prim_list_600_25.csv  prim_list_600_50.csv  prim_list_600_75.csv  prim_list_600_99.csv  prim_list_800.csv  res.txt.csv
